--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springProject
+spring.datasource.url=jdbc:postgresql://localhost:5432/SpringProject
 spring.datasource.username=postgres
-spring.datasource.password=post
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
