--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 spring.application.name=Bootstrap Spring Boot
+
+logging.file.name=application.log
+logging.file.path=spring/agency/application.log
+logging.level.org.springframework=ERROR
+logging.level.spring.agency=DEBUG
